--- a/03-multi-container.yaml
+++ b/03-multi-container.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   containers:
   - name : nginx
-    image : mginx
+    image : nginx
   - name : almalinux
     image : almalinux:9
     command : ["sleep","1000"]  
