--- a/05-errors.yaml
+++ b/05-errors.yaml
@@ -4,5 +4,7 @@ metadata:
   name: error-test
 spec :
   containers:
-  - name: nginx
-    image: nginfdfdfdgfff  
+  # - name: nginx
+  #   image: nginfdfdfdgfff  
+  - name: almalinux
+    image: almalinux:9
