--- a/10-pod-config.yaml
+++ b/10-pod-config.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind : Pod
 metadata:
-  - name: config-map-demo
+   name: config-map-demo
 spec :
   containers: 
   - name : nginx
