--- a/14-pod-service.yaml
+++ b/14-pod-service.yaml
@@ -5,8 +5,8 @@ metadata:
   # These labels are used to register this Pod with service
   labels:  
     project: roboshop
-    # component: frontend
-    # environment: dev
+    component: frontend
+    environment: dev
 
 spec: 
   containers:
