--- a/16-pod-node-port.yaml
+++ b/16-pod-node-port.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata: 
-  name: service-demo
+  name: service-np-demo
   # These labels are used to register this Pod with service
   labels:  
     project: roboshop
