--- a/20-deployment.yaml
+++ b/20-deployment.yaml
@@ -22,4 +22,4 @@ spec:
     spec: 
       containers: 
       - name: nginx
-        image: nginx:mainline-alpine3.23-perl
+        image: nginx:latest
