--- a/volumes/03-ebs-static.yaml
+++ b/volumes/03-ebs-static.yaml
@@ -13,3 +13,21 @@ spec:
     driver: ebs.csi.aws.com
     fsType: ext4
     volumeHandle: vol-00a838d6b6e29bbcc
+
+---
+
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: ebs-static
+spec:
+  storageClassName: "" # Empty string must be explicitly set otherwise default StorageClass will be set
+  volumeName: ebs-static
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 15Gi
+
+
+# persistent volume      
