--- a/volumes/03-ebs-static.yaml
+++ b/volumes/03-ebs-static.yaml
@@ -14,6 +14,8 @@ spec:
     fsType: ext4
     volumeHandle: vol-00a838d6b6e29bbcc
 
+# persistent volume        
+
 ---
 
 apiVersion: v1
@@ -30,4 +32,4 @@ spec:
       storage: 15Gi
 
 
-# persistent volume      
+# persistentclaim     
