--- a/volumes/03-ebs-static.yaml
+++ b/volumes/03-ebs-static.yaml
@@ -30,5 +30,22 @@ spec:
     requests:
       storage: 15Gi
 
+# persistentclaim    
 
-# persistentclaim     
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: nginx
+spec:
+  containers:
+  - name: app
+    image: nginx
+    volumeMounts:
+    - name: nginx-html
+      mountPath: /usr/share/nginx/html
+  volumes:
+  - name: nginx-html
+    persistentVolumeClaim:
+      claimName: ebs-static
+
