--- a/volumes/03-ebs-static.yaml
+++ b/volumes/03-ebs-static.yaml
@@ -37,6 +37,8 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: nginx
+  labels:
+    purpose: ebs-static
 spec:
   containers:
   - name: app
@@ -50,4 +52,20 @@ spec:
   - name: nginx-html
     persistentVolumeClaim:
       claimName: ebs-static
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx-ebs-static
+spec:
+  type:  LoadBalancer
+  selector:
+    purpose: ebs-static
+  ports:
+    - protocol: TCP
+      port: 80 # service port
+      targetPort: 80 # container port
+      nodePort: 30007 # node port range  
 
