--- a/volumes/04-ebs-dynamic.yaml
+++ b/volumes/04-ebs-dynamic.yaml
@@ -9,7 +9,6 @@ spec:
   resources:
     requests:
       storage: 4Gi
-
 ---
 apiVersion: v1
 kind: Pod
@@ -19,29 +18,28 @@ metadata:
     purpose: ebs-dynamic
 spec:
   containers:
-  - name: app
+  - name: nginx
     image: nginx
     volumeMounts:
     - name: nginx-html
       mountPath: /usr/share/nginx/html
   # nodeSelector:
-  #   topology.kubernetes.io/zone: us-east-1a
+  #   topology.kubernetes.io/zone: us-east-1b
   volumes:
   - name: nginx-html
     persistentVolumeClaim:
       claimName: ebs-dynamic
-
----  
+---
 apiVersion: v1
 kind: Service
 metadata:
   name: nginx-ebs-dynamic
 spec:
-  type:  LoadBalancer
+  type: LoadBalancer
   selector:
     purpose: ebs-dynamic
   ports:
     - protocol: TCP
       port: 80 # service port
       targetPort: 80 # container port
-      nodePort: 30007 # node port range  
+      nodePort: 30007 
