--- a/volumes/06-efs-sc.yaml
+++ b/volumes/06-efs-sc.yaml
@@ -8,3 +8,6 @@ parameters:
   fileSystemId: fs-0bafc88e2e953846a
   directoryPerms: "700"
   basePath: "/roboshop" # optional
+
+
+  # dynamic storecalss
