--- a/20-deployment.yaml
+++ b/20-deployment.yaml
@@ -11,16 +11,42 @@ spec:
   selector:
     # These labels are used to select pods
     matchLabels:
-      purpose: dp-demo
+      # purpose: dp-demo
+      purpose : headless-svc-demo
       project: roboshop
   # Pod definition    
   template:
     metadata:
       labels:
-        purpose: dp-demo
+        # purpose: dp-demo
+        purpose : headless-svc-demo
         project: roboshop
     spec: 
       containers: 
       - name: nginx
         image: nginx:latest
-        
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx-headless
+spec:
+  # if a service clusterIP then it is called as headless service
+  clusterIP: None
+  selector:
+    purpose : headless-svc-demo
+    project: roboshop
+  ports:
+    - protocol: TCP
+      port: 80  # service port
+      targetPort: 80 # container port
+
+
+# note deployment we use for 
+# purpose: dp-demo
+# project : roboshop
+
+# for headless service
+# project : headless-svc-demo
+# project: roboshop
